cambios re-entrega mobile first

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
     <main>
         <section class="imagen">
-            <img class="foto-desarrollador" src="./img/desarrolladora.jpg" alt="foto-desarrodor">
-            <h1 id="sobre-mi">Hola! Soy Romina Vegas</h1>
+            <img id="sobre-mi" class="foto-desarrollador" src="./img/desarrolladora.jpg" alt="foto-desarrodor">
+            <h1>Hola! Soy Romina Vegas</h1>
         </section>
         <section>
             <div>
@@ -48,8 +48,9 @@
             <P>Mi enfoque se basa en comprender tus necesidades y trabajar en estrecha colaboración contigo para
                 encontrar soluciones efectivas. Estoy dispuesta a aprender y adaptarme a medida que avanzamos juntos en
                 el proyecto...</p>
-            <p>Si estás buscando una colaboradora dedicada y dispuesta a crecer junto a ti, no dudes en contactarme, haciendo clic en cualquira de los enlaces abajo presentados o escribiendo al WhatsApp.
-                Estoy lista para  trabajar contigo y lograr el éxito.</p>
+            <p>Si estás buscando una colaboradora dedicada y dispuesta a crecer junto a ti, no dudes en contactarme,
+                haciendo clic en cualquira de los enlaces abajo presentados o escribiendo al WhatsApp.
+                Estoy lista para trabajar contigo y lograr el éxito.</p>
 
         </section>
         <section class="redes-sociales">
